@@ -106,8 +106,20 @@ public:
     bool GetObject(wxAutomationObject& obj, const wxString& property, int noArgs = 0, wxVariant args[] = NULL) const;
     bool GetObject(wxAutomationObject& obj, const wxString& property, int noArgs, const wxVariant **args) const;
 
-public:
+    // Returns the locale identifier used in automation calls. The default is
+    // LOCALE_SYSTEM_DEFAULT. Objects obtained by GetObject() inherit the
+    // locale identifier from the one that created them.
+    LCID GetLCID() const;
+
+    // Sets the locale identifier to be used in automation calls performed by
+    // this object. The default is LOCALE_SYSTEM_DEFAULT.
+    void SetLCID(LCID lcid);
+
+public: // public for compatibility only, don't use m_dispatchPtr directly.
     WXIDISPATCH*  m_dispatchPtr;
+
+private:
+    LCID          m_lcid;
 
     wxDECLARE_NO_COPY_CLASS(wxAutomationObject);
 };
